[package]
name = "access-denied"
version = "0.1.0"
authors = ["Huskydog9988 <39809509+Huskydog9988@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sentry = "0.21.0"
sentry-actix = "0.21.0"